--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.8.0/math.js"></script>
 </head>
 
 <body>
@@ -14,13 +15,14 @@
                 <canvas id="can"></canvas>
             </div>
             <div class="row buttons">
-                <button id="rewind"><i class="fas fa-backward"></i></button>
+                <button id="rewind" onclick="rewind()"><i class="fas fa-backward"></i></button>
                 <button id="pause" onclick="play()"><i class="fas fa-play"></i></button>
                 <button id="restart"><i class="fas fa-redo-alt"></i></button>
             </div>
         </div>
         <div class="column settingscol">
             <div class="settings">
+                <h3>KE: <span id="kineticEnergy"></span></h3>
                 <div id="particleList"></div>
                 <button id="addparticle" onclick="addParticle()">Add particle</button>
             </div>
@@ -43,7 +45,7 @@
         bodies[index].velocity = new Vector2(values.vx, values.vy);
     }
 
-    function getParticleValues(index){
+    function getParticleValues(index) {
         let values = {};
         let particleValues = document.getElementById("particleList").children[index];
         for (let i = 0; i < particleValues.children.length; i++) {
@@ -55,11 +57,11 @@
         return values;
     }
 
-    function setParticleValues(index, values){
+    function setParticleValues(index, values) {
         let particleValues = document.getElementById("particleList").children[index];
         for (let i = 0; i < particleValues.children.length; i++) {
             let child = particleValues.children[i];
-            if(values[child.id]){
+            if (values[child.id]) {
                 child.setAttribute("value", values[child.id])
             }
         }
@@ -68,13 +70,13 @@
 
     function addParticle() {
         let values = [];
-        for(let i = 0; i < bodies.length; i++){
+        for (let i = 0; i < bodies.length; i++) {
             values.push(getParticleValues(i));
         }
         document.getElementById("particleList").innerHTML +=
             `<div onclick="selectParticle(${bodies.length})" class="particleItem"><p>Particle ${bodies.length + 1}</p>
             <p>Velocity</p><input class="veccomponent" type="number" id="vx"><input class="veccomponent" type="number" id="vy"></div>`;
-        values.forEach((val, i)=>{
+        values.forEach((val, i) => {
             setParticleValues(i, val)
         })
         bodies.push(new Body(15, new Vector2(-10, -10), new Vector2(20, 20), colours[Math.floor(Math.random() * colours.length)]));
@@ -92,15 +94,15 @@
             case 37:
                 bodies[particleIndex].position.x -= 0.2;
                 break;
-                //up
+            //up
             case 38:
                 bodies[particleIndex].position.y -= 0.2;
                 break;
-                //right
+            //right
             case 39:
                 bodies[particleIndex].position.x += 0.2;
                 break;
-                //down
+            //down
             case 40:
                 bodies[particleIndex].position.y += 0.2;
                 break;
@@ -121,14 +123,28 @@
         clearInterval(moveInterval);
         moveInterval = undefined;
     }
-
     function play() {
-        bodies.forEach((b, i) => {
-            addValueToParticle(i);
-        });
+        if (timeScale > 0) {
+            timeScale = 0;
+            document.getElementById("pause").children[0].setAttribute("class", "fas fa-play");
+        }
+        else {
+            bodies.forEach((b, i) => {
+                addValueToParticle(i);
+            });
+            document.getElementById("pause").children[0].setAttribute("class", "fas fa-pause");
+            timeScale = 1;
+        }
+    }
 
-        document.getElementById("pause").children[0].setAttribute("class", "fas fa-pause");
-        timeScale = 1;
+    function rewind(){
+        if(timeScale == 0){
+            return;
+        }
+        if(timeScale > 0){
+            timeScale = 0;
+        }
+        timeScale -= 1;
     }
 </script>
 
